"new Edge class- restructure :)"